--- a/_assets/stylesheets/style.css.scss
+++ b/_assets/stylesheets/style.css.scss
@@ -43,20 +43,39 @@ nav{
   }
 }
 /* ========================================================= Body ===*/
-.projects{
-  background-color: #151718;
+section{
   background-color: #f8f8f8;
   padding: 100px 0 60px;
   h2{
-
     display: inline-block;
   }
-  p{
-    margin-bottom: 40px;
+  h3{
+    color: #666;
+    text-transform: uppercase;
+  }
+  ul{
+    list-style: none;
+    margin: 0 0 30px;
+    padding: 0;
+    li{
+      clear: both;
+      line-height: 1;
+      margin: 0 0 10px;
+      padding: 0;
+      i{
+        color: #a8b7c5;
+        float: left;
+        font-size: 12px;
+        margin: 7px 0 0 0;
+      }
+      p{
+        margin-bottom: 0;
+        padding-left: 20px;
+      }
+    }
   }
   .row{
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
   }
   .tag{
     float: right;
