adding link and fixign header

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,11 @@
 <header>
   <div class="container">
-    <nav>
-      <ul>
-        <li><a href=""></a></li>
-      </ul>
-    </nav>
+    <div class="content">
+      <div class="row">
+        <div class="column col-12">
+          <a href="/">{% image logo.svg %}</a>
+        </div><!--/column-->
+      </div><!--/row-->
+    </div><!--/content-->
   </div><!--/container-->
 </header>
