--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="container">
-    <p class="copy">&copy; 2015 Theron Industries. All rights reserved.</p>
+    <p class="copy">&copy; <script>new Date().getFullYear()>2010&&document.write(""+new Date().getFullYear());</script> Theron Industries&trade;. All rights reserved.</p>
     <!-- <ul>
       <li><a href="/jobs/">Jobs</a></li>
     </ul> -->
